feat: Implement persistent invoice IDs, enhance PDF export styling, and add a loading spinner component.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta property="og:title" content="Invoice Generator | Create Professional Invoices" />
     <meta property="og:description" content="Generate beautiful, professional invoices in seconds. Free invoice generator with PDF export." />
     <meta property="og:type" content="website" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&display=swap" rel="stylesheet">
