--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Invoice Generator | Create Professional Invoices</title>
-    <meta name="description" content="Generate beautiful, professional invoices in seconds. Free invoice generator with PDF export and local storage." />
+    <title>Midnight Invoice - Offline Invoice Generator</title>
+    <meta name="description" content="Generate beautiful, professional invoices offline in seconds. Free invoice generator with PDF export and local storage." />
     <meta name="author" content="Invoice Generator" />
     <meta property="og:title" content="Invoice Generator | Create Professional Invoices" />
     <meta property="og:description" content="Generate beautiful, professional invoices in seconds. Free invoice generator with PDF export." />
